# chislmet_hw2

./: .gitignore  CMakeLists.txt  Makefile  Makefile.part  main.cpp  utils.h
methods/: cheharda.cpp  cheharda.h  common_implicit.cpp  common_implicit.h  explicit_backward_flow.cpp  explicit_backward_flow.h  explicit_forward_flow.cpp  explicit_forward_flow.h  fake_method_copy.cpp  fake_method_copy.h  implicit_backward_flow.cpp  implicit_backward_flow.h  implicit_forward_flow.cpp  implicit_forward_flow.h  method_utils.cpp  method_utils.h  pc_main.cpp  predictor_corrector.cpp  predictor_corrector.h
plots/: calc_min_max_and_draw_plots.cpp  calc_min_max_and_draw_plots.h  images_generator.cpp  images_generator.h  plots.cpp  plots.h  plots_main.cpp  plots_utils.h  start_parameters.cpp  start_parameters.h  visualization.cpp  visualization.h
